src/tui/app/snapshots/sqwai__tui__app__tests__tests__chat_twelve_tools_collapsed_70x24.snap
---
source: src/tui/app/tests.rs
assertion_line: 4604
expression: s
---


 › Do many things.


   ▸ activity · 12 calls · 3s
 All done!













──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                            cache 0% · 0% · 0 · m  ef:off [CWD]
