src/tui/app/snapshots/sqwai__tui__app__tests__tests__startup_active_plan_70x24.snap
---
source: src/tui/app/tests.rs
assertion_line: 4756
expression: s
---





  sqwai 1.2.3 · /home/user/projects/myapp · main ✓

  ▸ active plan   "Refactor auth module"
    step 2/5 In progress · session a8f2c1d4 · 14:02
    memory  graph ready

  enter  continue plan
  tab    plan / act
  /help  controls






──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  ef:off [CWD]
