src/tui/app/snapshots/sqwai__tui__app__tests__tests__startup_api_key_warning_70x24.snap
---
source: src/tui/app/tests.rs
assertion_line: 4853
expression: s
---





  sqwai 1.2.3 · /home/user/projects/myapp · main ✓

  no active plan
  memory  graph ready
  API key not set for provider 'openai'. Set OPENAI_API_KEY or add
  api_key to config.

  tab    plan / act
  /help  controls






──────────────────────────────────────────────────────────────────────
›
──────────────────────────────────────────────────────────────────────
 ACT                            cache 0% · 0% · 0 · m  ef:off [CWD]
