src/tui/app/snapshots/sqwai__tui__app__tests__tests__startup_first_run_70x24.snap
---
source: src/tui/app/tests.rs
assertion_line: 3415
expression: s
---





  sqwai 1.2.3 · /home/user/projects/myapp · main ✓

  this project has no .sqwai yet
  /init create AGENTS.md and memory or just type a task

  tab    plan / act
  ctrl+s sessions
  ctrl+p providers
  ctrl+l plan
  ctrl+o settings
  ?      help
  /init  set up project



──────────────────────────────────────────────────────────────────────

──────────────────────────────────────────────────────────────────────
 ACT                   cache 0% · 0% · 0 · test-model  ef:off [CWD]
